--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <td>
       Score: <span id="skor">0</span>
     </td>
+	<td>
+    <div style="font-size: 12px; font-family: 'Comic Sans MS', cursive, sans-serif; text-align: center;">Bantu kami dengan donasi di saweria (<a href="https://saweria.co/kindknow" target="_blank">klik di sini</a>).</div>
+    </td>
     <td align="right">
       <span id="hati">❤️❤️❤️</span>
     </td>
