--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
   }
   function updateHati(){
     document.getElementById('hati').innerHTML = '';
+    for (var i = 0; i < 3 - banyakHati; i++){
+      document.getElementById('hati').innerHTML += '<span style="opacity: 0.0;">❤️</span>';
+    }
     for (var i = 0; i < banyakHati; i++){
       document.getElementById('hati').innerHTML += '❤️';
     }
