--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       Score: <span id="skor">0</span>
     </td>
 	<td>
-    <div style="font-size: 12px; font-family: 'Comic Sans MS', cursive, sans-serif; text-align: center;">Bantu kami dengan donasi di saweria (<a href="https://saweria.co/kindknow" target="_blank">klik di sini</a>).</div>
+    <div style="font-size: 12px; font-family: 'Comic Sans MS', cursive, sans-serif; text-align: center;">Bantu kami dengan donasi di saweria (<a href="https://saweria.co/kindknow" target="_blank">klik di sini</a>).<br>Visit our <a href="https://swrdfgd.github.io/KiankoLand/" target="_blank">main page</a> to use more of our tools.</div>
     </td>
     <td align="right">
       <span id="hati">❤️❤️❤️</span>
